--- a/APP/Android/PointsLeague/app/src/main/res/layout/content_activity_find.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/content_activity_find.xml
@@ -1,56 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_margin="10dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
         app:cardPreventCornerOverlap="false">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/imageView_activity_find"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@drawable/store_card"/>
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_centerInParent="true"
+                    android:id="@+id/imageView_activity_find"
+                    android:layout_width="78dp"
+                    android:layout_height="78dp"
+                    android:src="@drawable/nike_store" />
+            </RelativeLayout>
+
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="30dp"
-                android:paddingEnd="30dp"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
                 android:orientation="vertical"
-                android:background="#FFFFFF"
-                android:layout_alignBottom="@id/imageView_activity_find">
-
+                android:padding="10dp">
                 <TextView
-                    android:id="@+id/textView_all_points_main"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="周黑鸭周年店庆"
-                    android:textSize="20sp"
-                    android:textColor="@color/colorBlack"/>
+                    android:text="东方航空"
+                    android:textSize="24sp"
+                    android:layout_margin="5dp"/>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="出行"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="10dp"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="天河机场"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/nike_store"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="1000通用积分可抵扣100元机票费用"
+                        android:layout_margin="5dp"/>
+                </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textView_remain_points_main"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="积分兑换限时五折，不了解一下吗"
-                    android:textSize="16sp"
-                    android:textColor="@color/colorBlack"/>
+
+
             </LinearLayout>
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 </FrameLayout>
