--- a/APP/Android/PointsLeague/app/src/main/res/layout/content_cards_points.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/content_cards_points.xml
@@ -125,6 +125,7 @@
         android:layout_height="wrap_content"
         android:paddingEnd="50dp">
         <Button
+            android:id="@+id/button_exchange_points_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="积分兑换"
